@@ -550,8 +550,12 @@ static CCTexture2DPixelFormat defaultAlphaPixelFormat_ = kCCTexture2DPixelFormat
 		[[NSGraphicsContext currentContext] setShouldAntialias:NO];
 
 		NSImage *image = [[NSImage alloc] initWithSize:NSMakeSize(POTWide, POTHigh)];
-		[image lockFocus];
 
+		[image lockFocus];
+        
+        //patch for mac retina display and labelTTF
+        [[NSAffineTransform transform] set];
+        
 		[stringWithAttributes drawAtPoint:NSMakePoint(xPadding, POTHigh-dimensions.height+yPadding)]; // draw at offset position
 
 		NSBitmapImageRep *bitmap = [[NSBitmapImageRep alloc] initWithFocusedViewRect:NSMakeRect (0.0f, 0.0f, POTWide, POTHigh)];
